<resources>
    <string name="app_name">Word App</string>
    <string name="lorem">lorem</string>
    <string name="lorem_ipsum">Lorem ipsum dolor sit amet, consectetur adipiscing elit. Etiam euismod risus et urna tincidunt imperdiet. Nunc ultrices sapien ante, sed tempus arcu tristique in. Maecenas tempor pharetra enim, non maximus libero efficitur sed. Quisque et ultrices mi, at venenatis justo. Aliquam erat volutpat. Nulla bibendum, velit ac consequat mollis, urna leo tempus dui, et gravida diam odio vitae metus. Sed placerat scelerisque felis, ut dapibus massa aliquam a. Sed neque felis, molestie at lectus et, dignissim semper massa. Vivamus dignissim nunc ut ullamcorper pellentesque. Fusce euismod nibh tortor, vitae congue enim malesuada sed. Praesent interdum tempor viverra. Phasellus quam nisi, ultricies nec tellus non, rhoncus eleifend tortor.</string>
    <string name="title">Title</string>
    <string name="meaning">Meaning</string>
    <string name="synonym">Synonym</string>
    <string name="details">Details</string>
    <string name="cancel">Cancel</string>
    <string name="add_word">Add Word</string>
    <string name="add">Add</string>
    <string name="delete">Delete</string>
    <string name="search">Search</string>
    <string name="done">Done</string>
    <string name="undone">Undone</string>
    <string name="update">Update</string>
    <string name="update_word">Update Word</string>
    <string name="detail_title">Word Details</string>
    <string name="sort_order">Sort Order</string>
    <string name="ascending">Ascending</string>
    <string name="descending">Descending</string>
    <string name="sort_by">Sort By</string>
    <string name="date">Date</string>
    <string name="yes">Yes</string>
    <string name="no">No</string>
    <string name="new_words">New Words</string>
    <string name="completed_words">Completed Words</string>

    <string name="definition">Definition: %1$s</string>

    <string name="meaning_of_word">Meaning of word…</string>
    <string name="word_synonyms">Word Synonyms…</string>
    <string name="details_usage_of_word">Details/Usage of Word…</string>

    <string name="delete_confirm">You want to delete this word? \nAction can not be undone.</string>
    <string name="are_you_sure">Are you sure?</string>
    <string name="to_complete_question">Do you want to move the word to Complete List?</string>
    <string name="to_new_question">Do you want to move the word back to New Word List?</string>

    <string name="home_empty">You have no new Words.</string>
    <string name="complete_empty">You have no Completed Words.</string>
    <string name="no_synonym">There are currently no Synonyms for this word.</string>
    <string name="no_detail">There are currently no Details available.</string>
    <string name="no_title">Title cannot be blank.</string>
    <string name="no_meaning">Meaning cannot be blank.</string>
    <string name="no_word">Word was not found.</string>
    <string name="error">An error has occurred.</string>
</resources>