<?xml version="1.0" encoding="utf-8"?>
<com.google.android.material.card.MaterialCardView xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    app:cardBackgroundColor="@color/white"
    app:cardCornerRadius="@dimen/xxl"
    android:layout_gravity="center"
    android:layout_marginHorizontal="@dimen/xxl"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:orientation="vertical"
        android:padding="@dimen/xxxxl">

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textSize="@dimen/tx_xxxxl"
            android:text="@string/are_you_sure"
            android:textStyle="bold"
            android:layout_marginBottom="@dimen/xxxxl"/>

        <TextView
            android:id="@+id/tvConfirm"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textSize="@dimen/tx_xxl"
            android:text="@string/delete_confirm"/>

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/xxxxl">

            <com.google.android.material.button.MaterialButton
                android:id="@+id/mbCancel"
                android:layout_width="@dimen/confirmation_dialog_btn_width"
                android:layout_height="@dimen/confirmation_dialog_btn_height"
                android:text="@string/cancel"
                android:backgroundTint="@color/teal"
                app:cornerRadius="@dimen/xxs"
                android:layout_marginEnd="@dimen/xxxxl"/>

            <com.google.android.material.button.MaterialButton
                android:id="@+id/mbConfirm"
                android:layout_width="@dimen/confirmation_dialog_btn_width"
                android:layout_height="@dimen/confirmation_dialog_btn_height"
                android:text="@string/delete"
                android:backgroundTint="@color/red"
                app:cornerRadius="@dimen/xxs"/>

        </LinearLayout>


    </LinearLayout>

</com.google.android.material.card.MaterialCardView>